<resources>
    <string name="app_name">Mi Salud Plus</string>
    <string name="app_registro">Registro</string>
    <string name="app_agenda">Agenda</string>
    <string name="app_citas">Citas</string>
    <string name="app_perfil">Ajustes Perfil</string>
    <string name="digitos0">0,1,2,3,4,5,6,7,8,9</string>
    <string name="digitos1">qwertyuiopasdfghjklñzxcvbnm, ,.</string>
    <string name="digitos2">0,1,2,3,4,5,6,7,8,9,-, ,qwertyuiopasdfghjklñzxcvbnm,,,.,QWERTYUIOPASDFGHJKLÑZXCVBNM</string>
    <string name="opcion_ok">Acepto</string>
    <string name="opcion_nok">Cancelar</string>
    <string name="opcion_cancel">CERRAR</string>
    <string name="opcion_delete">ELIMINAR</string>
    <string name="opcion_change">POSPONER</string>
    <string name="estado">Estado: </string>
    <string name="estado_on">ACTIVO</string>
    <string name="estado_pend">PENDIENTE</string>
    <string name="estado_off">INACTIVO</string>
    <string name="estado_sos">SUSPENDIDO</string>
    <string name="load_foto">Cargando Foto</string>
    <string name="load_no_foto">Error Cargando Foto</string>
    <string name="avisos">¡Avisos!</string>
    <string name="temporal0">Opción para modificar datos del Medico</string>
    <string name="logueo_usr">Usuario</string>
    <string name="logueo_pss">Contraseña</string>
    <string name="logueo_reg">Registrarse</string>
    <string name="logueo_in">Ingresar</string>
    <string name="log_usr">Documento de Identidad</string>
    <string name="log_psww">Contraseña</string>
    <string name="log_wrong">Campos de inicio de sesión incompletos</string>
    <string name="log_uwrong">Usuario No Existe</string>
    <string name="log_pwrong">Contraseña Incorrecta</string>
    <string name="log_fb">Espere un momento por favor</string>
    <string name="data_empty">Faltan Datos</string>
    <string name="reg_1_ok">Paso 1: Completado!</string>
    <string name="reg_1_nok">Paso 1: Incompleto!</string>
    <string name="reg_2_ok">Paso 2: Completado!</string>
    <string name="reg_2_nok">Paso 2: Incompleto!</string>
    <string name="reg_3_ok">Paso 3: Completado!</string>
    <string name="reg_3_nok">Paso 3: Incompleto!</string>
    <string name="reg_4_ok">Paso 4: Completado!</string>
    <string name="reg_4_nok">Paso 4: Incompleto!</string>
    <string name="reg_5_ok">Paso 5: Completado!</string>
    <string name="reg_5_nok">Paso 5: Incompleto!</string>
    <string name="reg_6_ok">Paso 6: Completado!</string>
    <string name="reg_6_nok">Paso 6: Incompleto!</string>
    <string name="reg_7_ok">Paso 7: Completado!</string>
    <string name="reg_7_nok">Paso 7: Incompleto!</string>
    <string name="reg_8_ok">Paso 8: Completado!</string>
    <string name="reg_8_nok">Paso 8: Incompleto!</string>
    <string name="reg_9_ok">Paso 9: Completado!</string>
    <string name="reg_9_nok">Paso 9: Incompleto!</string>
    <string name="reg_10_ok">Paso 10: Completado!</string>
    <string name="reg_10_nok">Paso 10: Incompleto!</string>
    <string name="reg_data_nok">Datos Invalidos</string>
    <string name="reg_direccion">Dirección*</string>
    <string name="reg_finalStep">Verifique toda la información antes de continuar</string>
    <string name="reg_mensaje">Los datos marcados con (*) son obligatorios</string>
    <string name="reg_nombre">Nombre Completo*</string>
    <string name="reg_fechanacimiento">Fecha Nacimiento*</string>
    <string name="reg_calendario">DD / MM / AAAA</string>
    <string name="reg_genero">Genero*</string>
    <string name="reg_documento">Documento*</string>
    <string name="reg_documento_msg">El número de documento ya se encuetra registrado</string>
    <string name="reg_tipdocumento">Tipo</string>
    <string name="reg_numdocumneto">Numero</string>
    <string name="reg_expdocumento">Fecha de Expedicion</string>
    <string name="reg_slogan">¿Por qué te deberían escoger a ti como su Doctor?</string>
    <string name="reg_residencia">Residencia*</string>
    <string name="reg_departamento">Departamento*</string>
    <string name="reg_municipio">Municipio*</string>
    <string name="reg_correo1">Correo electrónico*</string>
    <string name="reg_correo2">Otro correo electrónico</string>
    <string name="reg_telefono">Telefonos</string>
    <string name="reg_celular">Celular*</string>
    <string name="reg_fijo1">Fijo*</string>
    <string name="reg_fijo2">Otro Fijo</string>
    <string name="reg_regMedico">Registro Medico*</string>
    <string name="reg_tarjetaProfesional">Tarjeta Profesional*</string>
    <string name="reg_tituloPregrado">Titulo de Pregrado*</string>
    <string name="reg_diploma">Diploma*</string>
    <string name="reg_acta">Acta de Grado*</string>
    <string name="reg_resolucion">Resolución para ejercer Medicina*</string>
    <string name="reg_mensajePos">Si tiene alguna especialidad, es obligatorio adjuntar Diploma y Acta de Grado</string>
    <string name="reg_tituloPosgrado">Titulo de Especialidad</string>
    <string name="reg_certificadoExperiencia">Certificado de Experiencia*</string>
    <string name="reg_institucion">Institución*</string>
    <string name="reg_fechaInicial">Fecha de Inicio*</string>
    <string name="reg_fechaFinal">Fecha de Finalización*</string>
    <string name="reg_mensajeUsuario">La siguiente información será vista por los usuarios</string>
    <string name="reg_cargo">Cargo*</string>
    <string name="reg_curso">Programa o Curso*</string>
    <string name="reg_sede">Dirección del Punto de Atención*</string>
    <string name="reg_nombreSede">Asigne un nombre para su punto de Atención*</string>
    <string name="reg_add">Puede agregar cuantas sean necesarias</string>
    <string name="reg_ejemploSede">Puede ser referente a su ubicación</string>
    <string name="reg_horarioConsulta">Horario de Consultas*</string>
    <string name="reg_tipoConsulta">Tipos de Consulta a brindar*</string>
    <string name="reg_modalidad">Modalidades de Atención*</string>
    <string name="reg_mensajeAtencion">Debe escoger al menos una de las opciones</string>
    <string name="reg_mediopago">Medios de Pago*</string>
    <string name="reg_servicios">¿Cuales servicios desea habilitar?*</string>
    <string name="reg_select_file">Seleccione el documento </string>
    <string name="reg_select_photo">Seleccione su foto </string>
    <string name="reg_select_no">No Selecciono un archivo </string>
    <string name="reg_select_ok">Archivo Ok </string>
    <string name="reg_error">Debe ingresar el tipo y número del documento para continuar </string>
    <string name="registrar">REGISTRAR</string>
    <string-array name="tipo_consultas">
        <item>Teleconsulta</item>
        <item>Telemedicina</item>
        <item>Domicilio</item>
        <item>Prioritaria (24 horas)</item>
        <item>Prioritaria (48 horas)</item>
        <item>No prioritaria</item>
    </string-array>
    <string-array name="modalidad_atencion">
        <item>Especializada por Primera Vez</item>
        <item>Especializada de Control</item>
        <item>Interconsulta Especilizada</item>
        <item>Interconsulta Especializada de Control</item>
        <item>Medicina General Primera Vez</item>
        <item>Medicina General de Control</item>
        <item>Medicina General de Enlace como especialista</item>
        <item>Contrareferencia</item>

    </string-array>
    <string-array name="medios_pago">
        <item>Exito</item>
        <item>PSE</item>
        <item>PayPal</item>
        <item>GANA</item>
        <item>Baloto</item>
        <item>Carulla</item>
        <item>SurtiMax</item>
        <item>Efecty</item>
    </string-array>
    <string-array name="servicios">
        <item>--</item>
        <item>--</item>
        <item>--</item>
        <item>--</item>
        <item>--</item>
    </string-array>
    <string-array name="tipdoc">
        <item>TIPO</item>
        <item>CC</item>
        <item>CE</item>
        <item>NI</item>
        <item>PA</item>
        <item>SE</item>
        <item>TI</item>
    </string-array>
    <string-array name="genero">
        <item>GENERO*</item>
        <item>Femenino</item>
        <item>Masculino</item>
        <item>Otro</item>
    </string-array>
    <string name="reg_tab1">1</string>
    <string name="reg_tab2">2</string>
    <string name="reg_tab3">3</string>
    <string name="main_slogan">SLOGAN</string>
    <string name="main_agenda">AGENDA</string>
    <string name="main_citas">CITAS</string>
    <string name="citas_mensaje">*Puede ver más información de la cita manteniendo presionado</string>
    <string name="citas_notificar1">Se notificara a </string>
    <string name="citas_notificar2_cancel">de la cancelación de la cita.</string>
    <string name="citas_notificar2_change">de la propuesta del cambio de la cita.</string>
    <string name="citas_estado_pos">En espera de respuesta</string>
    <string-array name="nwsLst">
        <item>NOTICIA 1: </item>
        <item>NOTICIA 2: </item>
        <item>NOTICIA 3: </item>
        <item>NOTICIA 4: </item>
        <item>NOTICIA 5: </item>
    </string-array>
    <string name="warning_mensaje">Para hacer el registro debe tener los siguientes documentos en el dispositivo:</string>
    <string-array name="documentos">
        <item>Tarjeta Profesional (PDF)</item>
        <item>Diplomas (PDF)</item>
        <item>Actas de Grado (PDF)</item>
        <item>Resolución para ejercer Medicina (PDF)</item>
        <item>Certificado de Experiencia (PDF)</item>
    </string-array>
    <string name="tiempoXCONSULTA">Tiempo para la consulta: </string>
    <string name="modATENCION">Modalidad de Atención: </string>
    <string name="tipoCONSULTA">Tipo de Consulta: </string>
    <string name="puntoAC">Punto de Atención: </string>
    <string name="apellido1">Primer Apellido</string>
    <string name="apellido2">Segundo Apellido</string>
    <string name="nombre1">Primer Nombre</string>
    <string name="nombre2">Segundo Nombre</string>
    <string name="reg9_tittleDialog">Horario PAC</string>
    <string name="addHorario">Agregar Horario</string>
    <string name="deleteHorario">¿Está seguro que desea eliminar este horario?</string>
    <string name="wrongHorario">Rango de Horario No Valido</string>
    <string name="tiempoConsulta">Tiempo por consulta: </string>
    <string name="saveHorario">Guardar</string>
    <string name="hhmm">hh:mm</string>
    <string name="horaInicio">Hora de Inicio</string>
    <string name="horaFinal">Hora de Finalización</string>
    <string name="horario">Estableza su disponibilidad horaria</string>
    <string name="auxiliar"> a </string>
    <string name="min">minutos</string>
    <string name="mensajeHorario">*Mantenga presionado para eliminar algun horario.</string>
    <string-array name="tiempoConsultas">
        <item>--</item>
        <item>20 minutos</item>
        <item>30 minutos</item>
        <item>40 minutos</item>
        <item>45 minutos</item>
        <item>60 minutos</item>
    </string-array>
    <string-array name="horas">
        <item>--</item>
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>
    <string-array name="minutos">
        <item>--</item>
        <item>00</item>
        <item>05</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
    </string-array>
</resources>