<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llReg9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5sp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:orientation="vertical"
        >

        <TextView
            style="@style/txtSub0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_mensajeUsuario" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg9_tvDireccionPAC"
                style="@style/txtBox3"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5sp"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:onClick="onClicDialogDireccionPAC"
                android:hint="@string/reg_sede"
                android:maxLines="5"
                android:padding="5dp"
                android:scaleType="fitCenter"
                />

            <ImageButton
                android:id="@+id/reg9_ibDireccionPAC"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:onClick="onClicDialogDireccionPAC"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/reg_direccion"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/editar" />

        </LinearLayout>

        <TextView
            style="@style/txtSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/reg_nombreSede"
            android:layout_marginBottom="5sp"
            android:layout_marginStart="5sp"
            />

        <EditText
            android:id="@+id/reg9_etNombrePAC"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@drawable/round_txt"
            style="@style/txtBox3"
            android:scaleType="fitCenter"
            android:hint="@string/reg_ejemploSede"
            />

    </LinearLayout>


</LinearLayout>