<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/llReg6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="5sp"
        >

        <TextView
            style="@style/txtSub0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg_mensajePos" />

        <EditText
            android:id="@+id/reg6_etTituloPosgrado"
            style="@style/txtBox3"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@drawable/round_txt"
            android:gravity="center"
            android:hint="@string/reg_tituloPosgrado"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:layout_marginTop="5sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg6_tvDiplomaPosgrado"
                style="@style/txtBox3"
                android:layout_width="0sp"
                android:layout_height="30sp"
                android:layout_weight="2"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_diploma"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/reg6_ibDiplomaPosgrado"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/reg_direccion"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/upload" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reg6_tvActaPosgrado"
                style="@style/txtBox3"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="2"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_acta"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/reg6_ibActaPosgrado"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/reg_direccion"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/upload" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>