<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/llReg7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="5sp">


        <EditText
            android:layout_marginTop="5sp"
            android:id="@+id/reg7_etCargo"
            style="@style/txtBox3"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@drawable/round_txt"
            android:gravity="center"
            android:hint="@string/reg_cargo"
            android:padding="5dp"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/reg7_tvCertificado"
                style="@style/txtBox3"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="2"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_certificadoExperiencia"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/reg7_ibCertificado"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/app_registro"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/upload" />
        </LinearLayout>

        <EditText
            android:id="@+id/reg7_etInstitucion"
            style="@style/txtBox3"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@drawable/round_txt"
            android:gravity="center"
            android:hint="@string/reg_institucion"
            android:padding="5dp"
            android:scaleType="fitCenter" />

        <TextView
            style="@style/txtSub"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/reg_fechaInicial" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/reg7_tvFechaInicio"
                style="@style/txtBox3"
                android:layout_width="160sp"
                android:layout_height="30sp"
                android:layout_marginEnd="5sp"
                android:layout_marginStart="10sp"
                android:onClick="onClicDialogExpFI"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_calendario" />

            <ImageButton
                android:id="@+id/reg7_ibFechaInicio"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:onClick="onClicDialogExpFI"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/app_registro"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar" />
        </LinearLayout>

        <TextView
            style="@style/txtSub"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/reg_fechaFinal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/reg7_tvFechaFinal"
                style="@style/txtBox3"
                android:layout_width="160sp"
                android:layout_height="30sp"
                android:layout_marginEnd="5sp"
                android:onClick="onClicDialogExpFF"
                android:layout_marginStart="10sp"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_calendario" />

            <ImageButton
                android:id="@+id/reg7_ibFechaFinal"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/img_btn"
                android:onClick="onClicDialogExpFF"
                android:contentDescription="@string/app_registro"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>