<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appdemo.mi_salud.misakudplus_medicos.UI_registro.registroVII">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="5sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:orientation="horizontal">

            <EditText

                android:id="@+id/certificado"
                style="@style/txtBox3"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="2"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_certificadoExperiencia"
                android:padding="5dp"
                android:scaleType="fitCenter" />

            <ImageButton
                android:id="@+id/upLoadCert"
                android:layout_width="45sp"
                android:layout_height="45sp"
                android:layout_marginEnd="15sp"
                android:layout_marginStart="5sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/app_registro"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/upload" />
        </LinearLayout>

        <EditText
            android:id="@+id/institucion"
            style="@style/txtBox3"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@drawable/round_txt"
            android:gravity="center"
            android:hint="@string/reg_institucion"
            android:padding="5dp"
            android:scaleType="fitCenter" />

        <TextView
            style="@style/txtSub"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/reg_fechaInicial" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/FechaInicio"
                style="@style/txtBox3"
                android:layout_width="160sp"
                android:layout_height="30sp"
                android:layout_marginEnd="5sp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_calendario" />

            <ImageButton
                android:id="@+id/btnFechInicio"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/app_registro"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar" />
        </LinearLayout>

        <TextView
            style="@style/txtSub"
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/reg_fechaFinal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/FechaFinal"
                style="@style/txtBox3"
                android:layout_width="160sp"
                android:layout_height="30sp"
                android:layout_marginEnd="5sp"
                android:layout_marginStart="10sp"
                android:background="@drawable/round_txt"
                android:gravity="center"
                android:hint="@string/reg_calendario" />

            <ImageButton
                android:id="@+id/btnFechaFinal"
                android:layout_width="35sp"
                android:layout_height="35sp"
                android:background="@drawable/img_btn"
                android:contentDescription="@string/app_registro"
                android:padding="5sp"
                android:scaleType="fitCenter"
                android:src="@drawable/calendar" />
        </LinearLayout>

        <EditText
            android:layout_marginTop="5sp"
            android:id="@+id/cargo"
            style="@style/txtBox3"
            android:layout_width="match_parent"
            android:layout_height="30sp"
            android:background="@drawable/round_txt"
            android:gravity="center"
            android:hint="@string/reg_cargo"
            android:padding="5dp"
            android:scaleType="fitCenter" />


        <TextView
            android:layout_marginTop="50sp"
            android:gravity="end"
            android:layout_marginEnd="10sp"
            android:id="@+id/idNext"
            style="@style/txtSub0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/reg_next"
            android:visibility="visible" />
    </LinearLayout>

</FrameLayout>
